--- a/whisperbox/package.json
+++ b/whisperbox/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.4",
     "mongoose": "^9.1.2",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-email": "^5.2.5",
+    "resend": "^6.7.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
