--- a/whisperbox/package.json
+++ b/whisperbox/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^1.0.4",
+    "bcrypt": "^6.0.0",
     "mongoose": "^9.1.2",
     "next": "16.1.1",
     "react": "19.2.3",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
