--- a/whisperbox/package.json
+++ b/whisperbox/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-email/components": "^1.0.4",
     "ai": "^6.0.57",
     "bcrypt": "^6.0.0",
@@ -24,9 +27,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-email": "^5.2.5",
+    "react-hook-form": "^7.71.1",
     "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
